--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
                 </article>
             </div>
             <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
+                <img src="imgs/produtos/produto2.png" alt="product-img">
+                <h3>Leviosa</h3>
                 <p>Stylish cafe chair</p>
                 <div class="product-div">
                     <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
                 </div>
                 <article class="product-hover">
                     <button>Add to Cart</button>
@@ -86,30 +85,14 @@
                     </div>
                 </article>
             </div>
+           
             <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
-                <p>Stylish cafe chair</p>
+                <img src="imgs/produtos/produto3.png" alt="product-img">
+                <h3>Lolito</h3>
+                <p>Luxury big sofa</p>
                 <div class="product-div">
-                    <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
-                </div>
-                <article class="product-hover">
-                    <button>Add to Cart</button>
-                    <div>
-                        <p><img src="imgs/share.svg" alt="">Share</p>
-                        <p><img src="imgs/compare.svg" alt="">Compare</p>
-                        <p><img src="imgs/like-branco.svg" alt="">Like</p>
-                    </div>
-                </article>
-            </div>
-            <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
-                <p>Stylish cafe chair</p>
-                <div class="product-div">
-                    <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
+                    <p>Rp 7.000.000</p>
+                    <strong>Rp 14.500.000</strong>
                 </div>
                 <h4>-50%</h4>
                 <article class="product-hover">
@@ -121,15 +104,13 @@
                     </div>
                 </article>
             </div>
-        </article>
-        <article class="products">
+
             <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
-                <p>Stylish cafe chair</p>
+                <img src="imgs/produtos/produto8.png" alt="product-img">
+                <h3>Respira</h3>
+                <p>Outdoor bar table</p>
                 <div class="product-div">
-                    <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
+                    <p>Rp 500.000</p>
                 </div>
                 <h4 class="new">New</h4>
                 <article class="product-hover">
@@ -141,13 +122,13 @@
                     </div>
                 </article>
             </div>
+            <article class="products">
             <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
-                <p>Stylish cafe chair</p>
+                <img src="imgs/produtos/produto5.png" alt="product-img">
+                <h3>Grifo</h3>
+                <p>Night lamp</p>
                 <div class="product-div">
-                    <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
+                    <p>Rp 1.500.000</p>
                 </div>
                 <article class="product-hover">
                     <button>Add to Cart</button>
@@ -158,13 +139,13 @@
                     </div>
                 </article>
             </div>
+
             <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
-                <p>Stylish cafe chair</p>
+                <img src="imgs/produtos/produto6.png" alt="product-img">
+                <h3>Muggo</h3>
+                <p>Small mug</p>
                 <div class="product-div">
-                    <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
+                    <p>Rp 150.000</p>
                 </div>
                 <article class="product-hover">
                     <button>Add to Cart</button>
@@ -175,13 +156,13 @@
                     </div>
                 </article>
             </div>
+
             <div class="product">
-                <img src="imgs/product1.png" alt="product-img">
-                <h3>Syltherine</h3>
-                <p>Stylish cafe chair</p>
+                <img src="imgs/produtos/produto7.png" alt="product-img">
+                <h3>Pingky</h3>
+                <p>Cute bed set</p>
                 <div class="product-div">
-                    <p>Rp 2.500.000</p>
-                    <strong>Rp 3.500.000</strong>
+                    <p>Rp 7.000.000</p>
                 </div>
                 <h4 class="new">New</h4>
                 <article class="product-hover">
@@ -193,6 +174,25 @@
                     </div>
                 </article>
             </div>
+
+            <div class="product">
+                <img src="imgs/produtos/produto8.png" alt="product-img">
+                <h3>Potty</h3>
+                <p>Minimalist flower pot</p>
+                <div class="product-div">
+                    <p>Rp 500.000</p>
+                </div>
+                <article class="product-hover">
+                    <button>Add to Cart</button>
+                    <div>
+                        <p><img src="imgs/share.svg" alt="">Share</p>
+                        <p><img src="imgs/compare.svg" alt="">Compare</p>
+                        <p><img src="imgs/like-branco.svg" alt="">Like</p>
+                    </div>
+                </article>
+            </div>
+            </article>
+            
         </article>
         <button class="our-products-button">Show More</button>
     </section>
@@ -213,8 +213,8 @@
             </div>
         </section>
         <section class="inspiration-end">
-            <img src="imgs/inspiration-img2.png" alt="image1">
-            <img src="imgs/inspiration-img3.png" alt="image2">
+            <img src="imgs/inspiration-img2.png" alt="image1" class="inspiration-img">
+            <img src="imgs/inspiration-img3.png" alt="image2" class="inspiration-img">
             <div class="inspiration-seta">
                 <img src="imgs/seta.png" alt="seta">
             </div>
@@ -231,22 +231,27 @@
         <h1>#FuhiroFurniture</h1>
         <article class="furniture-images">
             <section class="furniture-start">
-                <img src="imgs/furniture/furniture-img1.png" alt="">
-                <img src="imgs/furniture/furniture-img2.png" alt="">
+                <div>
+                    <img src="imgs/furniture/furniture-img1.png" alt="">
+                    <img src="imgs/furniture/furniture-img2.png" alt="">
+                </div>
                 <div>
                     <img src="imgs/furniture/furniture-img3.png" alt="">
                     <img src="imgs/furniture/furniture-img4.png" alt="">
                 </div>
             </section>
             <img src="imgs/furniture/furniture-img5.png" alt="">
-            <section class="furniture-end">
-                <img src="imgs/furniture/furniture-img6.png" alt="">
-                <img src="imgs/furniture/furniture-img7.png" alt="">
+            <section class="furniture-start">
+                <div>
+                    <img src="imgs/furniture/furniture-img6.png" alt="">
+                    <img src="imgs/furniture/furniture-img7.png" alt="">
+                </div>
                 <div>
                     <img src="imgs/furniture/furniture-img8.png" alt="">
                     <img src="imgs/furniture/furniture-img9.png" alt="">
                 </div>
             </section>
+
         </article>
     </section>
     <footer class="footer">
