--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio Easy Lucas</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -21,6 +22,11 @@
             <img src="imgs/like.svg" alt="">
             <img src="imgs/cart.svg" alt="">
         </div>
+        <article class="menu-toggle">
+            <section></section>
+            <section></section>
+            <section></section>
+        </article>
     </header>
     <main>
         <article>
